Bug 88396 - Using “More...” in Dropdown Menu “Apply style” Closes “Styles and Formatting” Window
Summary: Using “More...” in Dropdown Menu “Apply style” Closes “Styles and Formatting”...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.2 rc
Hardware: Other All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0 target:5.1.5
Keywords: bibisected, bisected, regression
: 90251 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-14 12:05 UTC by Harald Koester
Modified: 2016-10-25 19:02 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot before clicking "More Styles..." (69.04 KB, image/png)
2015-01-17 17:19 UTC, Harald Koester
Details
Screenshot after clicking "More Styles..." (55.78 KB, image/png)
2015-01-17 17:23 UTC, Harald Koester
Details
Bug 88396 Git bisect log (1.49 KB, text/plain)
2015-03-02 06:57 UTC, Gabriel Diosan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Koester 2015-01-14 12:05:40 UTC
In order to reproduce the bug:

[1] Create new text document.
[2] If not displayed open „Styles and Formatting“ window (F11).
[3] Formatting bar > Apply Style > More... Window „Styles and Formatting“ is closed. Expected: No close. 

In version 4.3.5 that window is not closed, hence regression.
Comment 1 retired 2015-01-14 14:34:22 UTC
* open writer
* open top menu format > Styles and Formatting (cmd + T on OSX btw).

But where is "Apple Style > more

Can't reproduce. Can you give more info?
Comment 2 Harald Koester 2015-01-14 15:50:26 UTC
"Apply Style" is the drop-down menu in the formatting bar where the current paragraph style is displayed and where you can assign another paragraph style to the current paragraph. If you move the mouse pointer above this menu the tip "Apply Style" is displayed.
Comment 3 Buovjaga 2015-01-17 12:49:28 UTC
Not reproduced. Tried with US & FI UIs.

Win 7 64-bit, LibO Version: 4.4.0.2
Build ID: a3603970151a6ae2596acd62b70112f4d376b99
Comment 4 Harald Koester 2015-01-17 17:19:30 UTC
Created attachment 112397 [details]
Screenshot before clicking "More Styles..."
Comment 5 Harald Koester 2015-01-17 17:23:35 UTC
Created attachment 112398 [details]
Screenshot after clicking "More Styles..."

Hoping that it's now clear what's happening.
Comment 6 Buovjaga 2015-01-17 19:43:21 UTC
(In reply to Harald Koester from comment #5)
> Created attachment 112398 [details]
> Screenshot after clicking "More Styles..."
> 
> Hoping that it's now clear what's happening.

Yes, that didn't happen in my case.
Comment 7 Jacques Guilleron 2015-01-29 18:04:49 UTC
Hi Harald,

Can you please see at Bug 85722 - Sidebar hides itself after unhiding it ?

Thank you,

Jacques
Comment 8 Harald Koester 2015-02-04 10:39:42 UTC
Hi Jacques,

I had a look at bug 85722. The bug described there is different to this bug. Hence no connection to this bug from my point of view. Also that bug exists already in versions 4.3.x, though this bug is new in 4.4.0.

Best Harald
Comment 9 Gordo 2015-02-23 21:27:35 UTC
This behaviour is happening in 4.4.0.3.  Clicking on "More Styles..." from the "Apply Style" drop down is the same as clicking on the "Styles and Formatting" button in the Foramtting toolbar or the Sidebar--it hides/closes the already open "Styles and Formatting" window in the Sidebar.

I suspect it doesn't test to see the state of the window--if it's open, keep it open--but just does the opposite of whatever state it's in.
Comment 10 Buovjaga 2015-02-24 06:08:58 UTC
(In reply to Keymasher from comment #9)
> This behaviour is happening in 4.4.0.3.  Clicking on "More Styles..." from
> the "Apply Style" drop down is the same as clicking on the "Styles and
> Formatting" button in the Foramtting toolbar or the Sidebar--it hides/closes
> the already open "Styles and Formatting" window in the Sidebar.

Ok, now I can suddenly reproduce this on Win & Linux.

On Linux 4.3.5 this is not observed, so this can be bibisected.

Win 7 Pro 64-bit, LibO Version: 4.4.0.3
Build ID: de093506bcdc5fafd9023ee680b8c60e3e0645d7
Locale: fi_FI

Version: 4.5.0.0.alpha0+
Build ID: b13534de022972131b46f93f5ada90af155eec9e
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-02-19_00:21:37
Locale: fi_FI

Ubuntu 14.10
Version: 4.4.0.3
Build ID: 40m0(Build:3)
Locale: en_US

Version: 4.3.5.2
Build ID: 3a87456aaa6a95c63eea1c1b3201acedf0751bd5
Comment 11 Octavio Alvarez 2015-02-25 07:26:38 UTC
I am seeing this in Linux 4.4.1.2, Ubuntu 14.04.1 LTS.

If the sidebar is closed, "Apply Style > More Styles..." opens it properly.

Possibly "Apply Style > More Styles..." is triggering an unconditional toggle of the sidebar instead of a conditional toggle or just an open.
Comment 12 Gabriel Diosan 2015-03-02 04:08:11 UTC
Hi all

I have been looking at this bug to try and bisect but I want to make sure I understand the problem first.

As I understand it we are talking about clicking "More Styles" on the "Styles and Formatting" dropdown and it closes the sidebar specifically? Or are we also referring to the "Styles and Formatting" window (not sidebar) that was present in older versions of LibreOffice.

I noticed whilst I was testing that when using F11 many times it would bring up a separate window which I did not see being closed by clicking on "More Styles", however I do see the sidebar being closed when clicking on "More Styles"

Gabriel
Comment 13 Gabriel Diosan 2015-03-02 04:25:22 UTC Comment hidden (obsolete)
Comment 14 Buovjaga 2015-03-02 06:03:06 UTC
Yep, it's the sidebar closing, you can bibisect from 4.3.5 onwards.
Comment 15 Gabriel Diosan 2015-03-02 06:57:05 UTC
Created attachment 113810 [details]
Bug 88396 Git bisect log

I have attached a git bisect log for this. It is the first bisect I have done so hopefully I have done it correctly.

One thing I noticed is that usually when the siebar was not closed by clicking on "more styles" a separate window would open which duplicated the the sidebar contents.

Hope this helps.
Comment 16 Yousuf Philips (jay) (retired) 2015-03-02 07:12:25 UTC
I reported the same issue in bug 84351 and it was supposedly closed as being fixed.
Comment 17 Gabriel Diosan 2015-03-04 11:35:39 UTC
Going to change the whiteboard comment to "bibisected" if there are no objections.

Gabriel
Comment 18 Buovjaga 2015-03-04 11:52:21 UTC
Yep, let's switch to "bibisected" :)
Comment 19 Matthew Francis 2015-03-15 04:39:23 UTC
According to the commit logs in question, the issue that was actually fixed under bug 84351 relates to clicking on icons. This bug relates to the Apply Style dropdown - More Styles... on the Formatting toolbar. It's not quite the same, so I'm leaving this as a separate bug rather than reopening the other one.

This seems to have been introduced in the below commit when the window was converted to be part of the sidebar. It still occurs on current master.
Adding Cc: to s.mehrbrodt@gmail.com; Any chance you could take a look at this? Thanks

    commit b4558b508141af16d335f45a0f12bdd34521e944
    Author:     Samuel Mehrbrodt <s.mehrbrodt@gmail.com>
    AuthorDate: Fri Aug 22 22:37:56 2014 +0200
    Commit:     Thomas Arnhold <thomas@arnhold.org>
    CommitDate: Sun Aug 24 06:26:17 2014 -0500
    
        fdo#73151 Make better use of the sidebar
Comment 20 Gordo 2015-03-27 16:01:11 UTC
*** Bug 90251 has been marked as a duplicate of this bug. ***
Comment 21 Marek Dolezel 2015-06-22 15:56:35 UTC
I can confirm this bug on fedora workstation 22. Tested with 4.4 from fedora repo and latest dev build.

Youtube video: 
https://www.youtube.com/watch?v=iVNDWN0cH48

Steps to reproduce:
If you click on "More styles..." in style menu and have opened sidebar with "Styles and Formatting" sidebar will be hide. 

Expected behavior: 
Sidebar with "Styles and Formatting" stays open since you clicked on "More styles.."

2. If you have open sidebar with "Properties" or "Gallery", then "Styles and Formatting" will open as expected.

Tested with:(in video)
Version: 4.4.3.2
Build ID: 4.4.3.2-6.fc22

Development version:(same issue)
Version: 5.1.0.0.alpha1+
Build ID: b990cdf57d6a85a36de713004a67a90ba2650623
Comment 22 Robinson Tryon (qubit) 2015-12-13 11:12:02 UTC Comment hidden (obsolete)
Comment 23 Caolán McNamara 2016-07-09 15:01:23 UTC
I fixed this during 5-2 I believe
Comment 24 Caolán McNamara 2016-07-09 15:08:28 UTC
Yes, as https://cgit.freedesktop.org/libreoffice/core/commit/?id=b81daea4a78083def286fa2d5360b152b7a703fd
so good in 5-2 and I have a backport for 5-1 as
https://gerrit.libreoffice.org/#/c/27071/
Comment 25 Commit Notification 2016-07-12 19:21:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e1e61bf5e5f368fc1ea579f8ae5eec9faafbd599&h=libreoffice-5-1

Resolves: tdf#88396 switching to sidebar panel will toggle it *off*...

It will be available in 5.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.