Resolves: tdf#88396 switching to sidebar panel will toggle it *off*...

if its already visible.

This solves tdf#88396, but I did this fix originally for....

on switching to slide layouts panel move into slide layout context

i.e. exit current textbox edit and shape selection

(cherry picked from commit 05aaef55252bc9f90cbbcc1967c38ab9a5a6c798)

OpenThenSwitchToDeck actually *toggles* deck visibility

so rename it to that and add a OpenThenSwitchToDeck that actually
does that, using the Toggle varient as the callback from the
sidebar button which toggles the current deck on/off

which retains the features of

// tdf#67627 Clicking a second time on a Deck icon will close the Deck
// tdf#88241 Summoning an undocked sidebar a second time should close sidebar

but means that calls to OpenThenSwitchToDeck from e.g. slide layout
don't auto close it if that deck is already open

(cherry picked from commit b81daea4a78083def286fa2d5360b152b7a703fd)

3e3724626b93447a7ab6bc7032e9c6839dabcf55

Change-Id: I16a2fca158cb4caab7b6bd001742df698735dd2b
Reviewed-on: https://gerrit.libreoffice.org/27071
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
(cherry picked from commit e1e61bf5e5f368fc1ea579f8ae5eec9faafbd599)